# RootAgent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  dump.rdb  main.py  pyproject.toml  pytest.ini  repro_executor.py  requirements.txt  setup.sh  test_csv.py  test_imports.py  test_persistence.py  test_ws_chat.py
backend/: .dockerignore  .env.example  Dockerfile  agent.py  config.py  executor.py  llm.py  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py  002_infra_admin_hierarchy.py  003_add_user_name.py
backend/app/: main.py
backend/app/agent/: agent.py  constants.py  executor.py  executor_interface.py  llm.py  prompts.py  tools.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: __init__.py  models.py  postgres.py
backend/app/models/: agent.py  chat.py  user.py
backend/app/routers/: admin.py  artifacts.py  auth.py  chat.py  document.py  health.py
backend/app/schemas/: artifact.py  auth.py
backend/app/services/: agent_manager.py  artifact_service.py  auth_login.py  auth_service.py  chat_messages.py  code_executor.py  infra_hub_users.py  redis_store.py  storage.py
backend/app/utils/: local_python_executor.py  logger.py  utils.py
backend/executor/: Dockerfile  executor_service.py  requirements.txt
backend/tests/: conftest.py  test_admin_crud.py  test_agent.py  test_auth_hierarchy.py  test_chat_messages.py  test_csv.py
backend/tests/fixtures/: sample_data.csv
backend/utils/: logger.py
frontend/: .env.example  Dockerfile  app.js  auth.js  index.html  login.html  login.js  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  style.css  tailwind.config.js  vite.config.ts
frontend/nginx/: nginx.conf
frontend/nginx/certs/: server.crt  server.key
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AccentPicker.tsx  AuthLoginLayout.tsx  ChatMessageBubble.tsx  ResizableShell.tsx  ThemeToggle.tsx  theme-provider.tsx
frontend/src/hooks/: useAccentColor.ts  useChatWebSocket.ts
frontend/src/lib/: accent-presets.ts  admin-api.ts  auth-context.tsx  display.ts  message-content.ts  parse-history.ts  roles.ts
frontend/src/pages/: AdminPage.tsx  Chat.tsx  Login.tsx  (+1 more)
src/: agent.py  config.py  executor.py  llm.py  prompts.py  schema.py
tests/: test_agent.py  verify_backend.py  verify_redis_chat.py
(+5 files in other folders)
