[project]
name = "rootagent-backend"
version = "0.1.0"
description = "RootAgent coding agent backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fakeredis>=2.32.1",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "litellm>=1.80.9",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sqlalchemy[asyncio]>=2.0.46",
    "tavily-python>=0.7.15",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
